# SocialpyKit

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  copier.yaml  docker-compose.yml  justfile  package.json  pyproject.toml
.cursor/rules/: socialpykit.mdc
.github/workflows/: frontend.yml  tests.yml
app/: __init__.py  __main__.py  gunicorn_runner.py  log.py  main.py  settings.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/dependencies/: __init__.py  auth.py  db.py  user.py
app/api/v1/routers/: __init__.py  auth.py  dummy.py  monitoring.py  users.py
app/core/: __init__.py  essentials.py  exceptions.py  security.py
app/core/server/: __init__.py  factory.py  lifespan.py  rate_limit.py
app/db/: __init__.py  base.py  utils.py
app/db/dao/: dummy_dao.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2026-05-13-13-19_efabc69b449f.py  2026-05-13-15-30_b5a41b3b02b3.py
app/db/models/: __init__.py  dummy_model.py  user.py
app/repositories/: __init__.py  dummy.py  user.py
app/schemas/: __init__.py  auth.py  dummy.py
app/services/: __init__.py  auth.py  dummy.py  user.py
app/web/: application.py  lifespan.py  rate_limit.py
app/web/api/: __init__.py  router.py
app/web/api/auth/: __init__.py  dependencies.py  views.py
app/web/api/dummy/: __init__.py  views.py
app/web/api/monitoring/: views.py
deploy/: Caddyfile  README.md  docker-compose.prod.yml
scripts/: promote_admin.py  rename-project.sh
socialpykit/: __main__.py  gunicorn_runner.py  log.py
socialpykit/db/: base.py  utils.py
socialpykit/db/dao/: dummy_dao.py
socialpykit/db/migrations/: env.py
socialpykit/db/models/: __init__.py  dummy_model.py
socialpykit/services/: __init__.py
socialpykit/web/: __init__.py  application.py  lifespan.py
socialpykit/web/api/: router.py
socialpykit/web/api/dummy/: __init__.py  views.py
socialpykit/web/api/echo/: __init__.py  views.py
socialpykit/web/api/monitoring/: __init__.py
tests/: __init__.py  conftest.py  test_dummy.py
tests/integration/: __init__.py  _helpers.py  test_auth.py  test_dummy_repository.py  test_health.py  test_user_repository.py  test_users.py
tests/unit/: __init__.py  test_auth_dependencies.py  test_auth_schemas.py  test_auth_service.py  test_dummy_service.py  test_exception_handlers.py  test_main.py  test_security.py  test_sentry_integration.py  test_user_service.py
ui/: .gitignore  .prettierignore  .prettierrc.json  app.vue  error.vue  eslint.config.ts  index.d.ts  nuxt.config.ts  openapi.json  package.json  tsconfig.app.json  vite.config.ts
ui/api/: index.ts  schema.ts
ui/api/endpoints/: auth.ts  dummy.ts  health.ts  users.ts
ui/components/: LoginForm.vue  RegisterForm.vue  UserEditDialog.vue
ui/components/ui/avatar/: AvatarFallback.vue  AvatarGroup.vue  AvatarGroupCount.vue  index.ts
ui/components/ui/badge/: Badge.vue
ui/components/ui/button/: index.ts
ui/components/ui/card/: Card.vue  CardAction.vue  CardTitle.vue
ui/components/ui/dialog/: DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogScrollContent.vue
ui/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue
ui/components/ui/form/: FormLabel.vue  (+1 more)
ui/composables/: useApi.ts
ui/layouts/: dashboard.vue  default.vue
ui/middleware/: admin.ts  auth.global.ts  auth.ts
ui/pages/: index.vue  login.vue  pricing.vue  register.vue
ui/pages/dashboard/: index.vue  profile.vue  users.vue
ui/plugins/: api.ts
ui/src/: App.vue  main.ts  style.css
ui/src/api/: client.ts  index.ts  schema.ts
ui/src/components/: HelloWorld.vue  LoginForm.vue  RegisterForm.vue  UserEditDialog.vue
ui/src/pages/: LoginPage.vue  NotFoundPage.vue  RegisterPage.vue
ui/src/router/: index.ts
ui/stores/: auth.ts
(+28 files in other folders)
