[project]
name = "socialpykit"
version = "0.1.0"
requires-python = ">=3.13,<4.0"
description = "Ultra-strict, type-safe FastAPI starter kit."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hasan Kaan Tan", email = "hasankaantan@gmail.com" }]
maintainers = [{ name = "Hasan Kaan Tan", email = "hasankaantan@gmail.com" }]
readme = "README.md"
dependencies = [
  "fastapi >=0.122.0,<1",
  "uvicorn[standard] >=0.38.0,<1",
  "gunicorn >=23.0.0,<24",
  "pydantic >=2.12.5,<3",
  "pydantic-settings >=2.12.0,<3",
  "yarl >=1.22.0,<2",
  "ujson >=5.11.0,<6",
  "SQLAlchemy[asyncio] >=2.0.44,<3",
  "alembic >=1.17.2,<2",
  "asyncpg >=0.31.0,<1",
  "httptools >=0.7.1,<1",
  "sentry-sdk >=2.46.0,<3",
  "loguru>=0.7.3",
  "whenever>=0.10.0",
  "pyjwt>=2.12.1",
  "bcrypt>=5.0.0",
  "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
  "pytest >=9.0.1,<10",
  "pytest-asyncio >=0.24,<2",
  "pytest-cov >=7.0.0,<8",
  "pytest-env >=1.2.0,<2",
  "httpx >=0.28.1,<1",
  "ruff >=0.14.6,<1",
  "mypy >=1.19.0,<2",
  "pyright >=1.1,<2",
  "pre-commit >=4.5.0,<5",
  "types-gunicorn>=26.0.0.20260510",
]


[tool.uv]
default-groups = ["dev"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_any_unimported = true
pretty = true
show_error_codes = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov=app --cov-fail-under=100 --cov-report=term-missing -p no:unraisableexception"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "SOCIALPYKIT_ENVIRONMENT=pytest",
    "SOCIALPYKIT_DB_BASE=socialpykit_test",
    "SOCIALPYKIT_SENTRY_DSN=",
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = [
  "app/__main__.py",         # uvicorn / gunicorn entry point, not exercised under pytest
  "app/gunicorn_runner.py",  # production worker class, runs only inside gunicorn
  "app/log.py",              # loguru bridge, configured only in production startup
  "app/db/migrations/*",     # alembic migration scripts, runtime artefacts
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@overload",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "app/db/migrations",
    ".venv/"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # docstrings optional (add back if project needs them)
    "COM812", # trailing comma — conflicts with ruff format, per ruff docs
    "B008",   # function call in argument default — FastAPI Depends() pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected
    "PLC0415", # Import outside toplevel
    "PLR2004", # Magic value in comparison — readable inside assertions
    "S105",    # Password literals — unavoidable in auth test fixtures
    "S106",    # Password kwargs — same reason
]
"app/gunicorn_runner.py" = [
    "ANN401",  # Any in **kwargs — gunicorn BaseApplication API requires it
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
]

[fastapi-template.options]
project_name = "socialpykit"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_routers = "True"
enable_kafka = "None"
enable_nats = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "True"
otlp_enabled = "None"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "True"
